# smartpatrol

./: .gitignore  composer.json  spark
.claude/: settings.local.json
.github/workflows/: ci.yml
app/Commands/: AnnualCheckup.php  BackupPatrol.php  GenerateErr.php  GenerateEui.php  GenerateReport.php  HouseKeeping.php  NtpDate.php  ReportNotification.php  ReportNotificationPeriodic.php  ResetPassword.php  TestEmail.php
app/Config/: App.php  Autoload.php  Constants.php  Email.php  Kint.php  Rbac.php  Routes.php  Services.php
app/Controllers/: Account.php  AdminController.php  AnnualCheckup.php  Approve.php  ApproveSetting.php  Auth.php  BaseController.php  Department.php  Device.php  DeviceLog.php  DeviceMessage.php  EmmaLink.php  Enterprise.php  EuiSettings.php  Form.php  FormItem.php  GenerateReport.php  Home.php  Jobtitle.php  LogViewer.php  Missing.php  Notice.php  OperationLog.php  Photograph.php  QueryReport.php  QueryReportItem.php  Rawdata.php  Repair.php  RepairFrom.php  RepairTo.php  Role.php  SystemSetting.php  Tag.php  Update.php  Webapi.php
app/Helpers/: assets_helper.php  common_helper.php  excel_helper.php  form_helper.php  html_helper.php  language_helper.php
app/Libraries/: Emma.php  Language.php  Ldap.php  Message.php  Seccode.php  Setting.php  User.php  (+2 more)
docs/: INSTALL_ROCKY_LINUX_9.md  UPGRADE_NOTES.md
public/: .htaccess  reset_password.php  test_api.php  test_password.php  webhook.php
scripts/: db_migrate.sh  deploy.sh
scripts/deployer/: Cargo.toml  deployer.toml.example
scripts/deployer/src/: main.rs
sql/: create_tracer_table.sql
(+292 files in other folders)
