[package]
name = "deployer"
version = "1.0.0"
edition = "2021"
authors = ["SmartPatrol Team"]
description = "Auto-deployment tool for SmartPatrol"

[dependencies]
# MySQL database connectivity (with native-tls for SSL)
mysql = { version = "25", default-features = false, features = ["default-rustls"] }
# Configuration file parsing
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# Date/time handling
chrono = "0.4"
# Environment variables
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = true
strip = true
